--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,25 @@
 		</dependency>
 		
 		<dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
-		
+      		<groupId>org.springframework.boot</groupId>
+     		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+    	<dependency>
+      		<groupId>com.h2database</groupId>
+      		<artifactId>h2</artifactId>
+    	</dependency>
+		<dependency>
+			<groupId>com.customeraddress</groupId>
+			<artifactId>CustomerAddress</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
